# UpTodo-Backend

./: .dockerignore  .env.dist  .gitignore  Dockerfile  compose.yaml  pyproject.toml  requirements.txt
config/: settings.py
entrypoints/: django-entrypoint.sh
