[tool.poetry]
name = "uptodo-backend"
version = "0.1.0"
description = ""
authors = ["Zakhar <fesikzakhar@khmnu.edu.ua>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.4"
djangorestframework = "^3.15.1"
gunicorn = "^21.2.0"
python-environ = "^0.4.54"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
